fix: block selection if block is aligned left or right

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -311,8 +311,11 @@
 	&[data-align="right"] {
 		width: 100%;
 
-		// When images are floated, the block itself should collapse to zero height.
-		height: 0;
+		&::after {
+			content: "";
+			clear: both;
+			display: table;
+		}
 
 		&::before {
 			content: none;
